k8s/gateway-api/envoy/prometheus-test-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: test-prometheus
  namespace: monitoring
spec:
  parentRefs:
    - name: eg
      namespace: envoy-gateway-system
  hostnames:
    - "test-prometheus.cctip.group"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: prometheus-stack-kube-prom-prometheus
          port: 9090
      matches:
        - path:
            type: PathPrefix
            value: /
